Creacion del controlador de la clase Burgerr

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PrePruebaContext": "Server=(localdb)\\mssqllocaldb;Database=PrePruebaContext-483112cd-e425-4b4c-b7ba-ba91f751d9bb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
