Cambios en los nomrbes de Database ya que tenia valores numéricos largos.

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PrePruebaContext": "Server=(localdb)\\mssqllocaldb;Database=PrePruebaContext-483112cd-e425-4b4c-b7ba-ba91f751d9bb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PrePruebaContext": "Server=(localdb)\\mssqllocaldb;Database=JulianaSosaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
